--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "chart.js": "^3.6.0",
     "mapbox-gl": "1.12.0",
     "react": "^17.0.2",
