--- a/package.json
+++ b/package.json
@@ -14,19 +14,27 @@
     "bootstrap-switch-button-react": "^1.2.0",
     "chart.js": "^3.6.0",
     "mapbox-gl": "1.12.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-chartjs-2": "^3.3.0",
     "react-countup": "^6.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-mapbox-gl": "4.8.6",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-to-pdf": "^0.0.14",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
+  },
+  "overrides": {
+    "nth-check": "2.0.1",
+    "autoprefixer": "10.4.5"
+  },
+  "resolutions": {
+    "nth-check": "2.0.1",
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
